hphp/test/zend/good/ext/exif/tests/bug60150.php
<?php
$infile = dirname(__FILE__).'/bug60150.jpg';
var_dump(exif_read_data($infile));
?>
===DONE===